# VO_movies

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  build_db.py  cinema.py  creds.py  data_filtering.py  db_add_cinemas.sql  db_schema.sql  db_utilities.py  dependencies.py  docker-compose.yaml  docker-compose_backup.yaml  main.py  main_scraper.py  movie.py  movies_database.py  pyproject.toml  requirements.txt  scraper.py  search.py  showing.py  test.py  vo_showings.json
data/: country_info.py
logs/: log_model.py  logging_config.json  setup_logger.py
models/: movie_model.py  showing_model.py
routers/: cinema_model.py  cinema_router.py  db_router.py  fastapi_cinema_model.py  return_models.py  search_router.py  showings_router.py
